# DGG

./: .ghci  .gitignore  DGG.cabal  LICENSE  Makefile  README
docs/: Bibliography.bib  ComparingInfoReq.lyx  DGG.lyx  Presentation.lyx  adapterInterface.lhs  adapters.lhs  adaptersEntry.lhs  createDTEP.lhs  data-tcvc.lhs  data-univ.lhs  derive-emgm.lhs  derive.lhs  dgg-types.lhs  dgg.dot  emgm-bdecl.lhs  emgm-compare.lhs  ep-fun.lhs  imports-emgm.lhs  isSuppEMGM.lhs  list-dgg.lhs  list-emgm-hse-fundef.lhs  list-emgm-hse.lhs  list-emgm.lhs  list-hse.lhs  list-instance.lhs  list-sop.lhs  list.lhs  makeEMGM.lhs  mkEPName.lhs  rest-from-ep.lhs  th.lhs
examples/: GHCAPI.hs  testmodule.hs
src/: Data.hs  EMGMAdapter.hs  EMGMTestData.hs  HSEParser.hs  Main.hs  README  TestTH.hs  testmodule.hs
src/DGG/: Adapter.hs  AdapterAbstract.hs  Data.hs  Parser.hs  Types.hs
src/DGG/Adapter/: EMGM.hs  MultiRec.hs  SYB.hs
