Name:           DGG
Maintainer:     Jurriën Stutterheim
Version:        0.2
Cabal-Version:  >= 1.6
License:        BSD3
License-File:   LICENSE
Author:         Jurriën Stutterheim, Sean Leather
Homepage:       http://github.com/norm2782/DGG
Category:       Generics
Synopsis:       Generator for GP libraries
Description:    Generator for GP libraries.
Build-Type:     Simple
Tested-With:    GHC

Library
    Build-Depends:   base >= 4.0 && <= 5.0
    Hs-Source-Dirs:  src

Executable dgg
    Main-is:        Main.hs
    Build-Depends:    cmdargs >= 0.8
                    , containers >= 0.3
                    , syb >= 0.3
    Hs-Source-Dirs: src

